--- a/Calculator/Calculator.css
+++ b/Calculator/Calculator.css
@@ -10,13 +10,14 @@
 .Calc-body{
     text-align: center;
     margin-top: 3%;
+    width: 18.6rem;
 }
 
 #input{
-    width:  292px;
-    height: 55px;
+    width:  100%;
+    height: 3.4rem;
     padding: 2px;
-    font-size: 36px;
+    font-size: 2rem;
     border: 2px solid aqua;
     background-color: #24252A;
     overflow-x: auto;
@@ -25,7 +26,7 @@
 
 .btns{
     display: grid;
-    grid-template: repeat(5, 75px) / repeat(4, 75px);
+    grid-template: repeat(5, 4.7rem) / repeat(4, 4.7rem);
 }
 
 .input-btn{
