--- a/Lead_Tracker/LeadTracker.css
+++ b/Lead_Tracker/LeadTracker.css
@@ -2,72 +2,46 @@
     --backcolor: rgba( 14.12%, 14.51% , 16.47%, 1);
 }
 
-body{
-    margin: 0;
-    padding: 1rem;
-    font-family: Arial, Helvetica, sans-serif;
-    min-width: 400px;
-    background-color: var(--backcolor);
-}
-
-input{
-    height: 50px;
-    color: white;
-    width: 100%;
-    border: 2px solid aqua;
-    border-radius: 1rem;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    padding-left: 10px;
-    padding-right: 10px;
+*{
     box-sizing: border-box;
+    padding: 0rem;
+    margin: 0.5rem;
+}
+
+body{
     background-color: var(--backcolor);
+}
+
+#input-el{
+    width: 90%;
+    height: 2rem;
     font-size: 1.5rem;
-}
-
-#input-btn{
-    transition: all 0.3s ease 0s;
-    color: aqua;
-    height: 50px;
-    width: 100px;
-    border: 2px solid aqua;
-    border-radius: 1rem;
-    padding: 2px;
     background-color: var(--backcolor);
+    border: 2px solid aqua;
+    border-radius: 2rem;
+    color: white;
+    padding: 0.3rem;
 }
 
-#input-btn:hover{
+button{
+    background-color: var(--backcolor);
+    font-size: 1rem;
+    background-color: var(--backcolor);
+    border: 2px solid aqua;
+    border-radius: 2rem;
+    color: white;
+    padding: 0.6rem;
+    color: aqua;
+    transition: all 0.3s ease 0s;
+}
+
+button:hover{
     background-color: aqua;
     color: var(--backcolor);
 }
 
-#delete-btn{
-    transition: all 0.3s ease 0s;
-    color: aqua;
-    height: 50px;
-    width: 100px;
-    border: 2px solid aqua;
-    border-radius: 1rem;
-    padding: 2px;
-    background-color: var(--backcolor);
-}
-
-#delete-btn:hover{
-    background-color: aqua;
-    color: var(--backcolor);
-}
-
-ul{
-    margin-top: 1.25rem;
-    padding-left: 0;
-    font-size: 1.5rem;
-}
-
-li{
-    list-style: none;
-    padding: 5px;
-}
-
-li a{
-    color: aqua;
+#ul-el{
+    color: white;
+    text-decoration: none;
+    font-size: 2ch;
 }
