--- a/Roshambo/App.css
+++ b/Roshambo/App.css
@@ -3,142 +3,71 @@
 }
 
 body{
-    
     background-color: var(--backcolor);
-    
-    #startScreen{
-        text-align: center;
-        padding: 5em;
+    text-align: center;
+}
 
-        #title{
-            color: aqua;
-            font-size: 72px;
-            text-shadow: 0.1em 0.1em black;
-        }
+#startScreen{
+    text-align: center;
+    margin-top: 5rem;
+}
 
-        #score{
-            color: aqua;
-            font-size: 36px;
-            text-shadow: 0.1em 0.1em black;
-        }
+h1{
+    font-size: 4rem;
+    color: aqua;
+    text-shadow: 0.2rem 0.2rem black;
+}
 
-        #startBtn{
-            height: 2em;
-            width: 4em;
-            background-color: var(--backcolor);
-            border: 2px solid aqua;
-            border-radius: 1em 1em 1em 1em;
-            font-size: 36px;
-            color: aqua;
-            transition: all 0.3s ease 0s;
-        }
+#score{
+    font-size: 3.5rem;
+    color: aqua;
+    text-shadow: 0.2rem 0.2rem black;
+}
 
-        #startBtn:hover{
-            background-color: aqua;
-            color: var(--backcolor);
-        }
-    }
-    
-    #game{
-        
-        display: none;
+button{
+    background-color: var(--backcolor);
+    color: aqua;
+    border: 2px solid aqua;
+    border-radius: 2rem;
+    font-size: 1.8rem;
+    height: 3rem;
+    width: 8rem;
+    margin: 1rem;
+    transition: all 0.3s ease 0s;
+}
 
-        #backBtn{
-            background-color: var(--backcolor);
-            border: 0;
-            font-size: 36px;
-            color: aqua;
-            position: fixed;
-            top: 5%;
-            left: 5%;
-        }
+button:hover{
+    color: var(--backcolor);
+    background-color: aqua;
+}
 
-        #winner{
-            text-align: center;
-            color: aqua;
-            font-size: 42px;
-            text-shadow: 0.1em 0.1em black;
-        }
+#game{
+    display: none;
+    text-align: center;
+}
 
-        #gamescore{
-            text-align: center;
-            color: aqua;
-            font-size: 36px;
-            text-shadow: 0.1em 0.1em black;
-        }
+#backBtn{
+    position: absolute;
+    background-color: transparent;
+    top: 1vh;
+    left: 1vw;
+    border: 0;
+    margin: 0;
+}
 
-        #player{
-            position: absolute;
-            bottom: 10%;
-            left: 10%;
-            width: 40%;
+#gamescore{
+    font-size: 2rem;
+    color: aqua;
+    text-shadow: 0.2rem 0.2rem black;
+}
 
-            #info{
-                color: aqua;
-                font-size: 42px;
-                text-shadow: 0.1em 0.1em black;
-            }
-            
-            #rock{
-                height: 3em;
-                width: 6em; 
-                background-color: var(--backcolor);
-                color: aqua;
-                font-size: 24px;
-                margin: 3%;
-                border-radius: 1em 1em 1em 1em;
-                transition: all 0.3s ease 0s;                   
-            }
+#player{
+    position: absolute;
+    bottom: 4vh;
+    left: 4vw;
+    max-width: 50%;
+}
 
-            #rock:hover{
-                background-color: aqua;
-                color: var(--backcolor);
-            }
-            
-            #paper{
-                height: 3em;
-                width: 6em; 
-                background-color: var(--backcolor);
-                color: aqua;
-                font-size: 24px;
-                margin: 3%;
-                border-radius: 1em 1em 1em 1em;
-                transition: all 0.3s ease 0s;               
-            }
-
-            #paper:hover{
-                background-color: aqua;
-                color: var(--backcolor);
-            }
-            
-            #scissors{
-                height: 3em;
-                width: 6em; 
-                background-color: var(--backcolor);
-                color: aqua;
-                font-size: 24px;
-                margin: 3%;
-                border-radius: 1em 1em 1em 1em;
-                transition: all 0.3s ease 0s;               
-            }
-
-            #scissors:hover{
-                background-color: aqua;
-                color: var(--backcolor);
-            }
-        }
-
-        #computer{
-            position: absolute;
-            bottom: 10%;
-            right: 10%;
-            width: 30%;
-            
-            #move{
-                color: aqua;
-                font-size: 42px;
-                text-shadow: 0.1em 0.1em black;
-            }
-        }
-    }
+#info, #move{
+    font-size: 2rem;
 }
