--- a/Atmos/index.css
+++ b/Atmos/index.css
@@ -8,107 +8,198 @@
     background-color: var(--backcolor) !important;
 }
 
-.atmos, #inp, .search{
-    margin: 1rem;
-    padding: 0.48rem;
+body{
+    overflow-x: hidden;
 }
 
-.atmos{
+/*1980 "Large"*/
+.atmos {
     color: aqua !important;
-    margin-left: 1.8rem;
+    margin: 0.5rem;
+    padding: 0.5rem;
+    font-size: 2.1rem;
+    margin-left: 2rem;
 }
 
 #inp{
-    width: 70%;
+    width:75%;
+    padding: 0.5rem;
+    font-size: 1rem;
     border-radius: 50px;
-    transition: all 0.2s ease-in 0.2s;
-}
-
-#inp:hover{
-    border: solid aqua 2px;
+    transition: all 0.5s ease 0.5s;
 }
 
 .search{
-    border-radius: 50px;
+    padding: 0.2rem;
+    margin: 0.2rem;
     margin-right: 2rem;
-    width: 10%;
-    transition: all 0.45s ease-in 0.2s;
+    font-size: 1.5rem;
+    border-radius: 50px;
+    transition: all 0.1s ease-in-out 0s;
+    border: 0;
+}
+
+#inp:hover{
+    border: 2px solid aqua;
 }
 
 .search:hover{
-    font-weight: bold;
-    color: var(--backcolor) !important;
-    background-color: aqua !important;
-}
-
-#display{
-    font-size: 8rem;
-    margin-top: 3rem;
-    margin-left: 3rem;
-    margin-bottom: 0;
-}
-
-#tim{
-    margin-top: 0.2rem;
-    margin-left: 3rem;
-    font-size: 2rem;
-}
-
-#icon-main{
-    margin-right: 3rem;
-    margin-top: 5rem;
-    height: 100px;
-    width: 100px;
-}
-
-.m1{
-    grid-area: left;
-    margin-top: 1rem;
-}
-
-.m2{
-    grid-area: right;
-    text-align: center;
-    margin-top: 4rem;
-}
-
-.main{
-    display: grid;
-    grid-template: 
-    "left right"
-    ;
-}
-
-#temp, #feelslike, #weather, #humidity, #icon-main{
-    margin-top: 2rem;
-    margin-left: 3rem;
-    margin-bottom: 0;
-}
-
-#range-main{
-    margin-top: 2rem;
-    margin-left: 3rem;
-    margin-bottom: 0;
-    font-size: 1.6rem;
-}
-
-#feelslike{
-    margin-top: 1rem;
-}
-
-#latestWeather{
-    margin: 0.5rem;
-}
-
-#daily{
-    margin: 4rem;
-}
+    color: aqua !important;
+} 
 
 .credit{
     position: fixed;
-    bottom: 0.5rem;
-    left: 0.5rem;
-    margin: 0.5rem;
-    padding: 0.5rem;
-    background: inherit;
+    left: 1.3rem;
+    bottom: 1.3rem;
+    font-size: 1rem;
 }
+
+#display, #temp{
+    font-size: 8rem;
+    margin: 3rem;
+    padding: 3rem;
+    margin-bottom: 0;
+    padding-bottom: 0;
+}
+
+#tim , #range-main, #feelslike, #humidity {
+    font-size: 2rem;
+    margin: 3rem;
+    padding: 3rem;
+    margin-top: 0.3rem;
+    padding-top: 0.3rem;
+    margin-bottom: 0.3rem;
+    padding-bottom: 0.3rem;        
+}
+
+#daily{
+    margin: 5rem;
+}
+
+.card{
+    border-radius: 25px !important;
+    padding: 1rem;
+    transition: all 0.5s ease-in 0.5s;
+}
+
+.card:hover{
+    border: 2px solid aqua !important;
+}
+
+#info{
+    margin-top: 3rem;
+    padding-top: 3rem;
+}
+/**/
+
+/*1400 "Medium"*/
+    @media screen and (max-width: 1400px) {
+        
+        .atmos{
+            font-size: 1.7rem;
+            margin-left: 1.5rem;
+        }
+
+        #inp{
+            font-size: 1rem;
+            margin-right: 1.5rem;
+            padding: 0.3rem;
+        }
+
+        #temp{
+            font-size: 7.7rem;
+        }
+    }
+/**/
+
+/*1280 "Small"*/
+    @media screen and (max-width: 1280px) { 
+        #temp{
+            margin-top: 4rem;
+            font-size: 7rem;
+        }
+    }
+/**/
+
+/*Mobile*/
+    @media screen and (max-width: 450px) { 
+
+        .atmos{
+            font-size: 1.5rem;
+        }
+
+        #inp{
+            font-size: 1rem;
+            padding: 0.4rem;
+            width: 45%;
+        }
+    
+        #display, #temp{
+            text-align: center;
+            font-size: 6rem;
+            margin: 1.5rem;
+            padding: 1.5rem;
+            margin-bottom: 0;
+            padding-bottom: 0;
+        }
+
+        #display{
+            margin-top: 5rem;
+        }
+
+        #tim, #feelslike{
+            text-align: center;
+            font-size: 1.5rem
+
+        }
+
+        #temp{
+            text-align: left;
+            font-size: 5rem;
+            margin: 1rem;
+            margin-top: 8rem;
+            padding: 1rem;
+            padding-bottom: 0;
+            margin-bottom: 0;
+        }
+
+       #range-main, #humidity{
+            text-align: left;
+            font-size: 1.5rem;
+            margin: 1rem;
+            padding: 1rem;
+            margin-top: 0.2rem;
+            margin-bottom: 0.2rem;
+            padding-top: 0.2rem;
+            padding-bottom: 0.2rem;
+        }
+
+        .card{
+            padding: 2.3rem;
+            margin: 0.2rem;
+            margin-bottom: 0.5rem;
+            margin-top: 0.5rem;
+            border: 2px solid white !important;
+        }
+
+    }
+/**/
+
+/*Mobile "Small 380px" */
+
+@media screen and (max-width: 380px) { 
+    .search{
+        font-size: 1rem;
+    }
+
+    #inp{
+        padding: 0.2rem;
+        font-size: 1rem;
+        width: 40%;
+    }
+
+    #display, #temp{
+        font-size: 5rem;
+    }
+}
+/**/
